bindings/c/include/xtreme3d.h

__declspec(dllimport) double CameraSetViewDepth(double, double);
__declspec(dllimport) double CameraSetTargetObject(double, double);
__declspec(dllimport) double CameraMoveAroundTarget(double, double, double);
__declspec(dllimport) double CameraSetDistanceToTarget(double, double);
__declspec(dllimport) double CameraGetDistanceToTarget(double);
__declspec(dllimport) double CameraCopyToTexture(double, char*, double, double);
__declspec(dllimport) double CameraGetNearPlane(double);
__declspec(dllimport) double CameraSetNearPlaneBias(double, double);
__declspec(dllimport) double CameraAbsoluteVectorToTarget(double, double);
__declspec(dllimport) double CameraAbsoluteRightVectorToTarget(double, double);
__declspec(dllimport) double CameraAbsoluteUpVectorToTarget(double, double);
__declspec(dllimport) double CameraZoomAll(double, double);
__declspec(dllimport) double CameraScreenDeltaToVector(double, double, double, double, double, double, double, double);
__declspec(dllimport) double CameraScreenDeltaToVectorXY(double, double, double, double, double);
__declspec(dllimport) double CameraScreenDeltaToVectorXZ(double, double, double, double, double);
__declspec(dllimport) double CameraScreenDeltaToVectorYZ(double, double, double, double, double);
__declspec(dllimport) double CameraAbsoluteEyeSpaceVector(double, double, double, double, double);
__declspec(dllimport) double CameraSetAutoLeveling(double, double);
__declspec(dllimport) double CameraMoveInEyeSpace(double, double, double, double);
__declspec(dllimport) double CameraMoveTargetInEyeSpace(double, double, double, double);
__declspec(dllimport) double CameraPointInFront(double, double, double, double);
__declspec(dllimport) double CameraGetFieldOfView(double, double);
/* clipplane.pas */
__declspec(dllimport) double ClipPlaneCreate(double);
__declspec(dllimport) double ClipPlaneEnable(double, double);
__declspec(dllimport) double ClipPlaneSetPlane(double, double, double, double, double, double, double);
/* color.pas */
__declspec(dllimport) double MakeColorRGB(double, double, double);
__declspec(dllimport) double MakeColorRGBFloat(double, double, double);
/* dce.pas */
__declspec(dllimport) double DceManagerCreate(void);
__declspec(dllimport) double DceManagerStep(double, double);
__declspec(dllimport) double DceManagerSetGravity(double, double);
__declspec(dllimport) double DceManagerSetWorldDirection(double, double, double, double);
__declspec(dllimport) double DceManagerSetWorldScale(double, double);
__declspec(dllimport) double DceManagerSetMovementScale(double, double);
__declspec(dllimport) double DceManagerSetLayers(double, double);
__declspec(dllimport) double DceManagerSetManualStep(double, double);
__declspec(dllimport) double DceDynamicSetManager(double, double);
__declspec(dllimport) double DceDynamicSetActive(double, double);
__declspec(dllimport) double DceDynamicIsActive(double);
__declspec(dllimport) double DceDynamicSetUseGravity(double, double);
__declspec(dllimport) double DceDynamicSetLayer(double, double);
__declspec(dllimport) double DceDynamicGetLayer(double);
__declspec(dllimport) double DceDynamicSetSolid(double, double);
__declspec(dllimport) double DceDynamicSetFriction(double, double);
__declspec(dllimport) double DceDynamicSetBounce(double, double);
__declspec(dllimport) double DceDynamicSetSize(double, double, double, double);
__declspec(dllimport) double DceDynamicSetSlideOrBounce(double, double);
__declspec(dllimport) double DceDynamicApplyAcceleration(double, double, double, double);
__declspec(dllimport) double DceDynamicApplyAbsAcceleration(double, double, double, double);
__declspec(dllimport) double DceDynamicStopAcceleration(double);