bindings/python3/xtreme3d/x3dfuncs.py


x3d.CameraSetViewDepth.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetViewDepth.restype = ctypes.c_double
def CameraSetViewDepth(aCamera, aDepth):
    return x3d.CameraSetViewDepth(aCamera, aDepth)

x3d.CameraSetTargetObject.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetTargetObject.restype = ctypes.c_double
def CameraSetTargetObject(aCamera, aObj):
    return x3d.CameraSetTargetObject(aCamera, aObj)

x3d.CameraMoveAroundTarget.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraMoveAroundTarget.restype = ctypes.c_double
def CameraMoveAroundTarget(aCamera, aPitch, aTurn):
    return x3d.CameraMoveAroundTarget(aCamera, aPitch, aTurn)

x3d.CameraSetDistanceToTarget.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetDistanceToTarget.restype = ctypes.c_double
def CameraSetDistanceToTarget(aCamera, aDistance):
    return x3d.CameraSetDistanceToTarget(aCamera, aDistance)

x3d.CameraGetDistanceToTarget.argtypes = [ctypes.c_double]
x3d.CameraGetDistanceToTarget.restype = ctypes.c_double
def CameraGetDistanceToTarget(aCamera):
    return x3d.CameraGetDistanceToTarget(aCamera)

x3d.CameraCopyToTexture.argtypes = [ctypes.c_double, ctypes.c_char_p, ctypes.c_double, ctypes.c_double]
x3d.CameraCopyToTexture.restype = ctypes.c_double
def CameraCopyToTexture(aCamera, aMtrl, aWidth, aHeight):
    return x3d.CameraCopyToTexture(aCamera, aMtrl, aWidth, aHeight)

x3d.CameraGetNearPlane.argtypes = [ctypes.c_double]
x3d.CameraGetNearPlane.restype = ctypes.c_double
def CameraGetNearPlane(aCamera):
    return x3d.CameraGetNearPlane(aCamera)

x3d.CameraSetNearPlaneBias.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetNearPlaneBias.restype = ctypes.c_double
def CameraSetNearPlaneBias(aCamera, aBias):
    return x3d.CameraSetNearPlaneBias(aCamera, aBias)

x3d.CameraAbsoluteVectorToTarget.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraAbsoluteVectorToTarget.restype = ctypes.c_double
def CameraAbsoluteVectorToTarget(aCamera, aInd):
    return x3d.CameraAbsoluteVectorToTarget(aCamera, aInd)

x3d.CameraAbsoluteRightVectorToTarget.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraAbsoluteRightVectorToTarget.restype = ctypes.c_double
def CameraAbsoluteRightVectorToTarget(aCamera, aInd):
    return x3d.CameraAbsoluteRightVectorToTarget(aCamera, aInd)

x3d.CameraAbsoluteUpVectorToTarget.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraAbsoluteUpVectorToTarget.restype = ctypes.c_double
def CameraAbsoluteUpVectorToTarget(aCamera, aInd):
    return x3d.CameraAbsoluteUpVectorToTarget(aCamera, aInd)

x3d.CameraZoomAll.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraZoomAll.restype = ctypes.c_double
def CameraZoomAll(aCamera, aViewer):
    return x3d.CameraZoomAll(aCamera, aViewer)

x3d.CameraScreenDeltaToVector.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraScreenDeltaToVector.restype = ctypes.c_double
def CameraScreenDeltaToVector(aCamera, aDx, aDy, aRatio, aNx, aNy, aNz, aInd):
    return x3d.CameraScreenDeltaToVector(aCamera, aDx, aDy, aRatio, aNx, aNy, aNz, aInd)

x3d.CameraScreenDeltaToVectorXY.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraScreenDeltaToVectorXY.restype = ctypes.c_double
def CameraScreenDeltaToVectorXY(aCamera, aDx, aDy, aRatio, aInd):
    return x3d.CameraScreenDeltaToVectorXY(aCamera, aDx, aDy, aRatio, aInd)

x3d.CameraScreenDeltaToVectorXZ.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraScreenDeltaToVectorXZ.restype = ctypes.c_double
def CameraScreenDeltaToVectorXZ(aCamera, aDx, aDy, aRatio, aInd):
    return x3d.CameraScreenDeltaToVectorXZ(aCamera, aDx, aDy, aRatio, aInd)

x3d.CameraScreenDeltaToVectorYZ.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraScreenDeltaToVectorYZ.restype = ctypes.c_double
def CameraScreenDeltaToVectorYZ(aCamera, aDx, aDy, aRatio, aInd):
    return x3d.CameraScreenDeltaToVectorYZ(aCamera, aDx, aDy, aRatio, aInd)

x3d.CameraAbsoluteEyeSpaceVector.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraAbsoluteEyeSpaceVector.restype = ctypes.c_double
def CameraAbsoluteEyeSpaceVector(aCamera, aFordist, aRightdist, aUpdist, aInd):
    return x3d.CameraAbsoluteEyeSpaceVector(aCamera, aFordist, aRightdist, aUpdist, aInd)

x3d.CameraSetAutoLeveling.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraSetAutoLeveling.restype = ctypes.c_double
def CameraSetAutoLeveling(aCamera, aFactor):
    return x3d.CameraSetAutoLeveling(aCamera, aFactor)

x3d.CameraMoveInEyeSpace.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraMoveInEyeSpace.restype = ctypes.c_double
def CameraMoveInEyeSpace(aCamera, aFordist, aRightdist, aUpdist):
    return x3d.CameraMoveInEyeSpace(aCamera, aFordist, aRightdist, aUpdist)

x3d.CameraMoveTargetInEyeSpace.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraMoveTargetInEyeSpace.restype = ctypes.c_double
def CameraMoveTargetInEyeSpace(aCamera, aFordist, aRightdist, aUpdist):
    return x3d.CameraMoveTargetInEyeSpace(aCamera, aFordist, aRightdist, aUpdist)

x3d.CameraPointInFront.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.CameraPointInFront.restype = ctypes.c_double
def CameraPointInFront(aCamera, aX, aY, aZ):
    return x3d.CameraPointInFront(aCamera, aX, aY, aZ)

x3d.CameraGetFieldOfView.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.CameraGetFieldOfView.restype = ctypes.c_double
def CameraGetFieldOfView(aCamera, aVpdim):
    return x3d.CameraGetFieldOfView(aCamera, aVpdim)


# clipplane.pas
x3d.ClipPlaneCreate.argtypes = [ctypes.c_double]
x3d.ClipPlaneCreate.restype = ctypes.c_double
def ClipPlaneCreate(aParent):
    return x3d.ClipPlaneCreate(aParent)

x3d.ClipPlaneEnable.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.ClipPlaneEnable.restype = ctypes.c_double
def ClipPlaneEnable(aCplane, aMode):
    return x3d.ClipPlaneEnable(aCplane, aMode)

x3d.ClipPlaneSetPlane.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.ClipPlaneSetPlane.restype = ctypes.c_double
def ClipPlaneSetPlane(aCplane, aPx, aPy, aPz, aNx, aNy, aNz):
    return x3d.ClipPlaneSetPlane(aCplane, aPx, aPy, aPz, aNx, aNy, aNz)


# color.pas
x3d.MakeColorRGB.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.MakeColorRGB.restype = ctypes.c_double
def MakeColorRGB(aR, aG, aB):
    return x3d.MakeColorRGB(aR, aG, aB)

x3d.MakeColorRGBFloat.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.MakeColorRGBFloat.restype = ctypes.c_double
def MakeColorRGBFloat(aR, aG, aB):
    return x3d.MakeColorRGBFloat(aR, aG, aB)


# dce.pas
x3d.DceManagerCreate.argtypes = []
x3d.DceManagerCreate.restype = ctypes.c_double
def DceManagerCreate():
    return x3d.DceManagerCreate()

x3d.DceManagerStep.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceManagerStep.restype = ctypes.c_double
def DceManagerStep(aMan, aDt):
    return x3d.DceManagerStep(aMan, aDt)

x3d.DceManagerSetGravity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceManagerSetGravity.restype = ctypes.c_double
def DceManagerSetGravity(aMan, aGrav):
    return x3d.DceManagerSetGravity(aMan, aGrav)

x3d.DceManagerSetWorldDirection.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceManagerSetWorldDirection.restype = ctypes.c_double
def DceManagerSetWorldDirection(aMan, aX, aY, aZ):
    return x3d.DceManagerSetWorldDirection(aMan, aX, aY, aZ)

x3d.DceManagerSetWorldScale.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceManagerSetWorldScale.restype = ctypes.c_double
def DceManagerSetWorldScale(aMan, aScale):
    return x3d.DceManagerSetWorldScale(aMan, aScale)

x3d.DceManagerSetMovementScale.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceManagerSetMovementScale.restype = ctypes.c_double
def DceManagerSetMovementScale(aMan, aScale):
    return x3d.DceManagerSetMovementScale(aMan, aScale)

x3d.DceManagerSetLayers.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceManagerSetLayers.restype = ctypes.c_double
def DceManagerSetLayers(aMan, aMode):
    return x3d.DceManagerSetLayers(aMan, aMode)

x3d.DceManagerSetManualStep.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceManagerSetManualStep.restype = ctypes.c_double
def DceManagerSetManualStep(aMan, aMode):
    return x3d.DceManagerSetManualStep(aMan, aMode)

x3d.DceDynamicSetManager.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetManager.restype = ctypes.c_double
def DceDynamicSetManager(aObj, aMan):
    return x3d.DceDynamicSetManager(aObj, aMan)

x3d.DceDynamicSetActive.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetActive.restype = ctypes.c_double
def DceDynamicSetActive(aObj, aMode):
    return x3d.DceDynamicSetActive(aObj, aMode)

x3d.DceDynamicIsActive.argtypes = [ctypes.c_double]
x3d.DceDynamicIsActive.restype = ctypes.c_double
def DceDynamicIsActive(aObj):
    return x3d.DceDynamicIsActive(aObj)

x3d.DceDynamicSetUseGravity.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetUseGravity.restype = ctypes.c_double
def DceDynamicSetUseGravity(aObj, aMode):
    return x3d.DceDynamicSetUseGravity(aObj, aMode)

x3d.DceDynamicSetLayer.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetLayer.restype = ctypes.c_double
def DceDynamicSetLayer(aObj, aLayer):
    return x3d.DceDynamicSetLayer(aObj, aLayer)

x3d.DceDynamicGetLayer.argtypes = [ctypes.c_double]
x3d.DceDynamicGetLayer.restype = ctypes.c_double
def DceDynamicGetLayer(aObj):
    return x3d.DceDynamicGetLayer(aObj)

x3d.DceDynamicSetSolid.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetSolid.restype = ctypes.c_double
def DceDynamicSetSolid(aObj, aMode):
    return x3d.DceDynamicSetSolid(aObj, aMode)

x3d.DceDynamicSetFriction.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetFriction.restype = ctypes.c_double
def DceDynamicSetFriction(aObj, aFriction):
    return x3d.DceDynamicSetFriction(aObj, aFriction)

x3d.DceDynamicSetBounce.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetBounce.restype = ctypes.c_double
def DceDynamicSetBounce(aObj, aBounce):
    return x3d.DceDynamicSetBounce(aObj, aBounce)

x3d.DceDynamicSetSize.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetSize.restype = ctypes.c_double
def DceDynamicSetSize(aObj, aX, aY, aZ):
    return x3d.DceDynamicSetSize(aObj, aX, aY, aZ)

x3d.DceDynamicSetSlideOrBounce.argtypes = [ctypes.c_double, ctypes.c_double]
x3d.DceDynamicSetSlideOrBounce.restype = ctypes.c_double
def DceDynamicSetSlideOrBounce(aObj, aMode):
    return x3d.DceDynamicSetSlideOrBounce(aObj, aMode)

x3d.DceDynamicApplyAcceleration.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicApplyAcceleration.restype = ctypes.c_double
def DceDynamicApplyAcceleration(aObj, aX, aY, aZ):
    return x3d.DceDynamicApplyAcceleration(aObj, aX, aY, aZ)

x3d.DceDynamicApplyAbsAcceleration.argtypes = [ctypes.c_double, ctypes.c_double, ctypes.c_double, ctypes.c_double]
x3d.DceDynamicApplyAbsAcceleration.restype = ctypes.c_double
def DceDynamicApplyAbsAcceleration(aObj, aX, aY, aZ):
    return x3d.DceDynamicApplyAbsAcceleration(aObj, aX, aY, aZ)

x3d.DceDynamicStopAcceleration.argtypes = [ctypes.c_double]
x3d.DceDynamicStopAcceleration.restype = ctypes.c_double
def DceDynamicStopAcceleration(aObj):
    return x3d.DceDynamicStopAcceleration(aObj)
